--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,10 +2,15 @@
 
 body {
   font-family: 'Raleway', sans-serif;
-  background: #e0e0e0;
-  color: #707070;
+  background-image: url("https://images.unsplash.com/photo-1594652010347-788d009508c3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60");
+  background-repeat: no-repeat;
+  background-size: cover;
   margin: 0;
   padding: 0;
+  
+}
+h1{
+  color: white;
 }
 
 .container {
